--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ pipewire (0.3.60-1) UNRELEASED; urgency=medium
       of Suggests (LP: #1993358)
   * pipewire-alsa: install conf files in the right location
       (Closes: #1013276, #1023504, LP: #1975823)
+  * pipewire: depend on adduser (Closes: #1023758)
 
  -- Dylan Aïssi <daissi@debian.org>  Thu, 10 Nov 2022 14:12:40 +0100
 
