--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+pipewire (0.3.60-2) UNRELEASED; urgency=medium
+
+  * Cherry-pick upstream recommended patches:
+      - bf3516ba: To avoid crashes when switching profiles
+      - b46d8a8c: Make PipeWire in qemu work again (Closes: #1024093)
+
+ -- Dylan Aïssi <daissi@debian.org>  Thu, 17 Nov 2022 12:05:32 +0100
+
 pipewire (0.3.60-1) unstable; urgency=medium
 
   * New upstream release
