--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-pipewire (0.3.60-3) UNRELEASED; urgency=medium
+pipewire (0.3.60-3) unstable; urgency=medium
 
   * pipewire-libcamera: New package for libcamera plugin (Closes: #1024591)
 
- -- Dylan Aïssi <daissi@debian.org>  Tue, 22 Nov 2022 10:16:47 +0100
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 22 Nov 2022 10:45:04 +0100
 
 pipewire (0.3.60-2) unstable; urgency=medium
 
