--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ pipewire (0.3.61-1) UNRELEASED; urgency=medium
       - b46d8a8c: Make PipeWire in qemu work again
   * pipewire-audio-client-libraries: depend on ${misc:Depends}
   * pipewire-jack: drop lintian-overrides, not relevant anymore
+  * pipewire-libcamera: set minimum libcamera to 0.0.1
 
  -- Dylan Aïssi <daissi@debian.org>  Thu, 24 Nov 2022 11:45:36 +0100
 
