--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pipewire (0.3.61-2) UNRELEASED; urgency=medium
+
+  * Disable libcamera plugin for m68k and x32,
+     because the libcamera minimum version is not available.
+
+ -- Dylan Aïssi <daissi@debian.org>  Fri, 09 Dec 2022 11:32:50 +0100
+
 pipewire (0.3.61-1) unstable; urgency=medium
 
   * New upstream release
