--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ pipewire (0.3.61-2) UNRELEASED; urgency=medium
 
   * Disable libcamera plugin for m68k and x32,
      because the libcamera minimum version is not available.
+  * Install upstream NEWS file in /usr/share/doc/pipewire instead of
+     /usr/share/doc/libpipewire-0.3-0/ to make it easier to find.
+     (Closes: #1024815)
 
  -- Dylan Aïssi <daissi@debian.org>  Fri, 09 Dec 2022 11:32:50 +0100
 
