--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,9 @@
-pipewire (0.3.62-2) UNRELEASED; urgency=medium
+pipewire (0.3.63-1) UNRELEASED; urgency=medium
 
-  * Cherry-pick upstream patch:
-      - cbc75dc9: pw-mon: recognize -N and -C as valid options
-          (Closes: #1025900)
+  * New upstream release
+      - pw-mon: recognize -N and -C as valid options (Closes: #1025900)
 
- -- Dylan Aïssi <daissi@debian.org>  Wed, 14 Dec 2022 13:07:30 +0100
+ -- Dylan Aïssi <daissi@debian.org>  Thu, 15 Dec 2022 11:19:05 +0100
 
 pipewire (0.3.62-1) unstable; urgency=medium
 
