--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-pipewire (0.3.63-1) UNRELEASED; urgency=medium
+pipewire (0.3.63-1) unstable; urgency=medium
 
   * New upstream release
       - pw-mon: recognize -N and -C as valid options (Closes: #1025900)
   * Update symbols file
   * Re-enable libcamera plugin for x32
 
- -- Dylan Aïssi <daissi@debian.org>  Thu, 15 Dec 2022 11:19:05 +0100
+ -- Dylan Aïssi <daissi@debian.org>  Thu, 15 Dec 2022 12:07:57 +0100
 
 pipewire (0.3.62-1) unstable; urgency=medium
 
