--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+pipewire (0.3.63-3) UNRELEASED; urgency=medium
+
+  * Patch doc/Doxyfile.in to make the build reproducible.
+  * Move libpipewire-module-x11-bell.so into its own package
+      libpipewire-0.3-modules-x11. This module is only useful with X11.
+  * pipewire-pulse: Demote pulseaudio-utils from Recommends to Suggests
+      pactl is not used anymore to load by default modules. Modules can now
+      be loaded using pulse.cmd.
+
+ -- Dylan Aïssi <daissi@debian.org>  Mon, 09 Jan 2023 17:37:36 +0100
+
 pipewire (0.3.63-2) unstable; urgency=medium
 
   * Enable ModemManager in native backend in bluez5 spa plugin
