--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pipewire (0.3.63-3.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+  * Correctly manage pulse drain state, Closes: #1027762
+
+ -- Sam Hartman <hartmans@debian.org>  Tue, 10 Jan 2023 09:38:01 -0700
+
 pipewire (0.3.63-3) experimental; urgency=medium
 
   * Patch doc/Doxyfile.in to make the build reproducible.
