--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pipewire (0.3.64-1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Dylan Aïssi <daissi@debian.org>  Thu, 12 Jan 2023 17:15:09 +0100
+
 pipewire (0.3.63-4) unstable; urgency=medium
 
   [ Dylan Aïssi ]
