--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-pipewire (0.3.64-2) UNRELEASED; urgency=medium
+pipewire (0.3.64-2) unstable; urgency=medium
 
   * Cherry-pick upstream recommended patch:
       - a979c0f4: fixes compilation issues with deprecated keys
 
- -- Dylan Aïssi <daissi@debian.org>  Tue, 17 Jan 2023 14:19:53 +0100
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 17 Jan 2023 18:07:23 +0100
 
 pipewire (0.3.64-1) unstable; urgency=medium
 
