--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pipewire (0.3.64-4) unstable; urgency=medium
+
+  * Source only upload to unstable for migration to testing
+
+ -- Dylan Aïssi <daissi@debian.org>  Tue, 24 Jan 2023 22:34:29 +0100
+
 pipewire (0.3.64-3) experimental; urgency=medium
 
   * pipewire-pulse: do not recommend pipewire-alsa (Closes: #1029377)
