--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pipewire (0.3.65-2) unstable; urgency=medium
+
+  * pipewire-pulse: Add wireplumber or pipewire-media-session-pulseaudio
+      in Recommends. This is required to make sure a working session manager
+      is installed when pipewire-pulse is pulled by dependencies.
+      (Closes: #1029763)
+
+ -- Dylan Aïssi <daissi@debian.org>  Mon, 06 Feb 2023 10:01:33 +0100
+
 pipewire (0.3.65-1) unstable; urgency=medium
 
   * New upstream release
