--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-pipewire (0.3.65-3) UNRELEASED; urgency=medium
+pipewire (0.3.65-3) unstable; urgency=medium
 
   * pipewire-audio: add pulseaudio-module-bluetooth in Conflicts+Replaces
       to help apt make a choice (Closes: #1031396)
 
- -- Dylan Aïssi <daissi@debian.org>  Fri, 17 Feb 2023 15:12:21 +0100
+ -- Dylan Aïssi <daissi@debian.org>  Fri, 17 Feb 2023 16:10:28 +0100
 
 pipewire (0.3.65-2) unstable; urgency=medium
 
